# binderoo

binderoo_client/d/project/vs2015/: binderoo_client.vcxproj  binderoo_client.vcxproj.filters
binderoo_client/d/src/: binderoo_client.d
binderoo_client/d/src/binderoo/: descriptorsearch.d  functiondescriptor.d  hash.d  objectprivacy.d  slice.d  traits.d  typedescriptor.d  variabledescriptor.d
binderoo_client/d/src/binderoo/binding/: attributes.d  binding.d  boundenum.d  boundfunction.d  boundmodule.d  boundobject.d  cheaderobjects.d  cheaderparsing.d  cppfunctiongenerator.d  functionstub.d  inheritance.d  mangler.d  package.d  serialise.d
binderoo_client/d/src/binderoo/math/: angle.d  constants.d  quaternion.d  transform.d  vector.d
binderoo_client/d/src/binderoo/scripting/: attributes.d  scripting.d
binderoo_client/d/src/binderoo/util/: atomic.d  bitpacking.d  builtin.d  enumoptions.d  structofarrays.d
binderoo_common/cpp/interface/binderoo/: allocator.h  defs.h  functiontraits.h  functiontraits_cpp11.inl  functiontraits_vs2012.inl  slice.h
binderoo_common/cpp/src/binderoo/: containers.h  fileutils.cpp  fileutils.h  sharedevent.cpp  sharedevent.h
binderoo_host/cpp/interface/binderoo/: boundfunction.h  boundobject.h  exports.h  host.h  host_c_api.h  imports.h
binderoo_host/cpp/project/cmake/: CMakeLists.txt  generate.sh
binderoo_host/cpp/project/cmake/binderoo-host/: CMakeLists.txt
binderoo_host/cpp/project/cmake/binderoo-util/: CMakeLists.txt
binderoo_host/cpp/project/cmake/binderoo_host/: CMakeLists.txt
binderoo_host/cpp/project/cmake/binderoo_util/: CMakeLists.txt
binderoo_host/cpp/project/vs2015/: binderoo_host.vcxproj  binderoo_host.vcxproj.filters  binderoo_util.vcxproj
binderoo_host/cpp/src/binderoo/: host.cpp  imports.cpp
binderoo_host/cpp/src/binderoo/windows/: dllmain.cpp
binderoo_host/cpp/src/util/: binderoo_util.cpp  paramhandler.cpp  paramhandler.h
binderoo_host/dotnet/project/: binderoo_host_dotnet.csproj  binderoo_host_dotnet.sln
binderoo_host/dotnet/src/: DSlice.cs  Host.cs  ImportedClass.cs  ImportedFunction.cs  Slice.cs
binderoo_host/dotnet/src/Properties/: AssemblyInfo.cs
